clusters/homelab/apps/harbor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
